<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.snehanaliyath.carpooling.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="#0c0001"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/password1"
        android:background="@android:drawable/edit_text"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="25dp" />

    <TextView
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="76dp"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email1"
        android:ems="10"
        android:layout_marginTop="34dp"
        android:id="@+id/editText"
        android:background="@android:drawable/edit_text"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/sign_up2"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@android:color/holo_green_dark"
        android:onClick="signupabc"
        tools:ignore="RelativeOverlap"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/button1"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Don't have an account?"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:ignore="HardcodedText"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:background="@android:color/holo_green_dark"
        android:layout_marginTop="44dp"
        android:onClick="choice (MainActivity)"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_toStartOf="@+id/button2"
        android:layout_alignEnd="@+id/editText2" />

</RelativeLayout>
