<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"   
    tools:context="com.example.snehanaliyath.carpooling.Signup1"
    tools:showIn="@layout/activity_signup1"
    android:minHeight="9dp"
    android:minWidth="9dp"
    android:scrollbars="vertical"
    android:visibility="visible">

    <RelativeLayout

        android:id="@+id/content_signup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
        android:text="@string/mobile_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mobno"
        tools:text="Mobile No:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignBaseline="@+id/mobfield"
        android:layout_alignBottom="@+id/mobfield"
        android:layout_toStartOf="@+id/mobfield"
        android:layout_marginEnd="11dp" />

        <CheckBox
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxyes"
        android:layout_alignBaseline="@+id/checkBoxno"
        android:layout_alignBottom="@+id/checkBoxno"
        android:layout_centerHorizontal="true"
        tools:text="YES" />

    <CheckBox
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/checkBoxno"
        tools:text="NO"
        android:layout_below="@+id/editText2"
        android:layout_toEndOf="@+id/checkBoxyes"
        android:layout_marginStart="41dp"
        android:checked="false" />

    <TextView
        android:text="@string/car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/textView6"
        tools:text="Car Model:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/checkBoxyes"
        android:layout_alignStart="@+id/mobno" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText3"
        android:background="@android:drawable/edit_text"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/mobno"
        android:singleLine="true" />

    <TextView
        android:text="@string/capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="Capacity:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:text="@string/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        tools:text="Color:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/vehicle_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        tools:text="Vehicle Number:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/editText6"
        android:layout_alignStart="@+id/textView4" />

        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/editText6"
        android:background="@android:drawable/edit_text"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:entries="@array/capacitynum"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/editText3"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />

        <TextView
            android:text="@string/do_you_own_a_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            tools:text="Do you own a car?"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_alignBaseline="@+id/checkBoxyes"
            android:layout_alignBottom="@+id/checkBoxyes"
            android:layout_alignStart="@+id/homeadd" />

        <Button
            android:text="SIGN UP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:background="@android:color/holo_green_dark"
            android:textAlignment="center"
            android:onClick="choices"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/editText4"
            android:layout_alignParentStart="true" />

        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mobfield"
        android:background="@android:drawable/editbox_background_normal"
        android:phoneNumber="true"
            android:maxLines="1"
            android:layout_marginTop="62dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp" />

        <TextView
            android:text="@string/home_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeadd"
            tools:text="Home Address:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="43dp"
            android:layout_below="@+id/mobfield"
            android:layout_toStartOf="@+id/mobfield" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText2"
            android:background="@android:drawable/edit_text"
            android:editable="false"
            android:layout_alignBaseline="@+id/homeadd"
            android:layout_alignBottom="@+id/homeadd"
            android:layout_toEndOf="@+id/textView7" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:background="@android:drawable/edit_text"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</ScrollView>
